# movavg

./: CMakeLists.txt  README.md
libmovavg/: CMakeLists.txt  libmovavg.cpp  libmovavg.h
main/: CMakeLists.txt  main.cpp
test/: CMakeLists.txt  movavg_test.cpp
